# counterline

./: .gitignore  Full counterline app report.md  Makefile  README.md  _initial_analysis_cl.md  prompt.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: android-release.yml  android-security.yml  android.yml  build.yml  codeql.yml  fixed-suite-smoke.yml  wrapper-smoke.yml
apps/android/: .gitignore  README.md  settings.gradle.kts
apps/android/core/engine/src/main/cpp/: CMakeLists.txt  stockfish_bridge.cpp
book/: 01-what-counterline-is.qmd  01-what-this-book-is.qmd  02-how-counterline-was-built.qmd  02-the-two-weapons.qmd  03-white-repertoire.qmd  04-black-repertoire.qmd  05-model-games-vs-sf18.qmd  05-model-games.qmd  06-key-plans-and-patterns.qmd  07-common-deviations.qmd  07-common-opponent-deviations.qmd  08-drill-system.qmd  08-training-drills.qmd  09-quick-start-repertoire.qmd  09-quick-start.qmd  10-claim-boundaries-and-reproducibility.qmd  10-proof-boundaries.qmd  _quarto.yml  appendix-a-full-lines.qmd  appendix-a-lines.qmd  appendix-b-match-results.qmd  appendix-b-results.qmd  appendix-c-how-to-use-the-app.qmd  appendix-c-how-to-use-the-engine.qmd  index.qmd  references.bib
book/marketing/: amazon-description.md  back-cover-copy.md  email-sequence.md  keywords-and-categories.md  landing-page-copy.md  positioning.md
book/scripts/: build_opening_tree.py  extract_line_tables.py  generate_all_diagrams.py  render_board.py  (+1 more)
configs/: black-killer.yml  black-petroff.yml  engines.yml  thresholds.yml  timebudgets.yml  white-killer.yml  white-qgd-exchange.yml
content/: claims_manifest.json  proof_manifest.json  repertoire_manifest.json  repo_audit.md
docs/: architecture.md  best-config.md  black-killer-report.md  claims.md  codespaces.md  experiment-log.md  final-line-selection.md  final-product-status.md  final-proof.md  fixed-suite-strategy.md  legal.md  profiles.md  reproducibility.md  suite-spec.md  testing.md  toolchain.md  white-killer-report.md
opening_suites/: generate_suite.py
results/: README.md
scripts/: bootstrap_codespace.sh  build_all.sh  build_stockfish.sh  build_wrapper.sh  check_toolchain.sh  fetch_fastchess.sh  mine_black_killer.py  mine_white_killer.py  populate_repertoire_db.py  run_black_suite.sh  run_fixed_suite.sh  run_proof_matrix.sh  run_white_suite.sh  smoke_uci.sh  summarize_matches.py  sync_upstream.sh  system_info.sh
tests/: test_determine_fortification.py  test_opening_lock.py  test_repertoire_detection.py  test_uci_smoke.py  test_white_killer.py
wrapper/: __init__.py  __main__.py  black_targeted_book.py  determine.py  empirical_db.py  engine_pool.py  fortify.py  opening_lock.py  plan_score.py  policy_tree.py  repertoire.py  repertoire_db.py  rollout.py  targeted_book.py  telemetry.py  types.py  uci_app.py
(+375 files in other folders)
