[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "counterline"
version = "0.1.0"
description = "Fixed-opening specialist wrapper around Stockfish"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "LaunchDay Studio Inc." }
]
dependencies = [
  "chess>=1.11.2",
  "orjson>=3.10.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-xdist>=3.6.1",
  "ruff>=0.6.9",
]

[project.scripts]
counterline-uci = "wrapper.uci_app:main"

[tool.setuptools]
packages = ["wrapper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
